src/App.css
body,
*,
*::after,
*::before {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: 'Clash Display', 'Times New Roman', Times, serif;
  font-weight: 100;

}

:root {
  --primary: #FFFFE3;
  --secondary: #10100E;
}

body {
  width: 100vw;
  background-color: var(--secondary);
  overflow-x: hidden;
}

body::-webkit-scrollbar {
  display: none;
}

.navbar-wrapper {
  z-index: 999;
  position: fixed;
  left: 0;
  top: 0;
  padding: 0 10%;
  width: 100%;
}

.navbar-wrapper .row-w-padding {
  padding: 15px 0;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.hamburger-bar {
  width: 24px;
  height: 1px;
  background-color: var(--primary);
  position: relative;
}

.hamburger-bar::before,
.hamburger-bar::after {
  content: '';
  position: absolute;
  height: 1px;
  background-color: var(--primary);
}

.hamburger-bar::before {
  width: 22px;
  top: -8px;
  right: 0;
}

.hamburger-bar::after {
  width: 27px;
  bottom: -8px;
  right: 0;
}

.navbar-wrapper .row-w-padding .links {
  display: none;
  gap: 60px;
  opacity: 70%;
}

.navbar-wrapper .row-w-padding .logo,
.navbar-wrapper .row-w-padding .links .link,
.navbar-wrapper .row-w-padding .links .toggle-theme {
  text-decoration: none;
  color: var(--primary);
}

.navbar-wrapper .row-w-padding .logo {
  font-size: 20px;
}

#hero-wrapper {
  width: 100%;
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
}

#hero-wrapper .hero-main-content {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  color: var(--primary);
  font-weight: 100;
}

.scroll-text {
  display: flex;
  justify-content: center;
  align-items: center;
  position: fixed;
  color: var(--primary);
  width: 90%;
  height: 100%;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  z-index: 3;
}

.scroll-text .letter {
  font-size: 3em;
  font-weight: 100;
  opacity: 50%;
}

.spacer1 {
  height: 100px;
}

.spacer {
  height: 100vh;
}

.scroll-text h1 {
  opacity: 70%;
}

.hero-main-content {
  text-align: center;
}

.line {
  width: 0px;
  height: 1px;
  background-color: var(--primary);
}

#hero-wrapper .hero-main-content .main h2 span {
  font-weight: 500;
}

#hero-wrapper .hero-main-content .desc h2 {
  color: var(--secondary);
  background-color: var(--primary);
  padding: 4px 8px;
  font-weight: 300;
}

.pillar {
  z-index: 998;
  position: fixed;
  display: none;
  flex-direction: column;
  bottom: 0;
  justify-content: center;
  align-items: center;
  gap: 10px;
}

#left-pillar {
  margin-left: 10%;
}

#left-pillar img {
  height: 40px;
  opacity: 80%;
}

#right-pillar {
  right: 0;
  margin-right: 10%;
}

#right-pillar p {
  color: var(--primary);
  writing-mode: vertical-lr;
  font-size: 17px;
  letter-spacing: 4px;
  opacity: 80%;
}

.pillar .vertical-line {
  background-color: var(--primary);
  height: 150px;
  width: 1px;
  opacity: 50%;
}

.letter-spacer {
  width: 6px;
}

.test {
  background-color: var(--secondary);
  width: 100%;
  display: grid;
  place-items: center;
  z-index: 2;
  padding-top: 20px;
}

.desc {
  z-index: 1;
}

.main-letter-container {
  display: flex;
}

.main-letter.name {
  font-weight: 500;
}

.about-section-wrapper {
  height: 240vh;
  width: 100vw;
  /* background-color: red; */
}

.about-section-pin {
  height: 100vh;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  color: var(--primary);
  font-size: 3em;

}

.about-img {
  width: 250px;
  height: 150px;
  background-image: url("../public/assets/kio-img.png");
  background-size: 130%;
  background-position: center;
  transform: translate(20px,-17px);
}

.about-text[data-text="random"],
.about-text[data-text="mind"] {
  transform: translateX(-60px);
}

.about-text[data-text="words"] {
  transform: translateX(60px);
}

@media only screen and (min-width: 800px) {

  .pillar {
    display: flex;
  }

  .navbar-wrapper .row-w-padding .logo h1 {
    font-size: 64px;
  }

  .navbar-wrapper .row-w-padding .links {
    display: flex;
    font-size: 25px;
    justify-content: center;
    align-items: center;
  }

  .navbar-wrapper .row-w-padding .hamburger-menu {
    display: none;
  }
}

